Task2/kuber/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yandex-practicum
  labels:
    name: yandex-practicum
