Task2/kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp
  namespace: yandex-practicum
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
        - name: scaletestapp
          image: ghcr.io/yandex-practicum/scaletestapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "300m"
              memory: "40Mi"
            requests:
              cpu: "100m"
              memory: "40Mi"
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp
  namespace: yandex-practicum
spec:
  selector:
    app: scaletestapp
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
