Task2/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yandex-practicum-ingress
  namespace: yandex-practicum
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: insuretech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scaletestapp
                port:
                  number: 8080
